name:                formchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/formrre/formchain#readme
license:             BSD3
license-file:        LICENSE
author:              Timotej Tomandl
maintainer:          timotomandl@gmail.com
copyright:           Copyright (c) 2017 Timotej Tomandl
category:            Network, Finance
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Data.BlockChain
                     , Network.Peer
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  Safe
                     , PolyKinds
                     , GADTs
                     , ExplicitForAll
                     , NoImplicitPrelude
                     , EmptyDataDecls

executable formchain
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , formchain
  default-language:    Haskell2010
  default-extensions:  Safe
                     , PolyKinds
                     , GADTs
                     , ExplicitForAll
                     , NoImplicitPrelude

test-suite formchain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , formchain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  Safe
                     , PolyKinds
                     , GADTs
                     , ExplicitForAll
                     , NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/formrre/formchain
